update EXTC fonts 1.01

--- a/fonts/README
+++ b/fonts/README
@@ -6,7 +6,7 @@ From CNS11643:
 	TW-Sung-Ext-B-98_1.ttf
 	TW-Sung-Plus-98_1.ttf
 
-From EXTC:
-	https://onedrive.live.com/?cid=3CBE848FD0F85C5E&id=3CBE848FD0F85C5E!124
-	http://cid-3cbe848fd0f85c5e.skydrive.live.com/self.aspx/Extension%20C/EXTCKAI.ttf
-	http://cid-3cbe848fd0f85c5e.skydrive.live.com/self.aspx/Extension%20C/EXTCMING.ttf
+From C Extension:
+	EXTCKAI.ttf
+	EXTCMING.ttf
+	http://blog.xuite.net/extensionc/twblog/312593089
